--- a/src/components/Footer/index.scss
+++ b/src/components/Footer/index.scss
@@ -17,5 +17,12 @@
     p {
         font-size: 24px;
         font-weight: 500;
+
+        @media screen and (max-width:1440px) {
+            font-size: 12px;
+            width: 133px;
+            text-align: center;
+            padding-bottom: 50px;
+        }
     }
 }
