--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -7,10 +7,12 @@
     max-width: 1240px;
     height: 68px;
     margin: 45px auto;
+    padding: 0 45px;
 
-    @media screen and (max-width:1440px) {
+    @media screen and (max-width:767px) {
         width: 335px;
         margin: 10px auto;
+        padding: 0;
 
         img {
             width: 145px;
@@ -21,7 +23,7 @@
         display: flex;
         gap: 57px;
 
-        @media screen and (max-width:1440px) {
+        @media screen and (max-width:767px) {
             gap: 26px;
         }
 
@@ -30,7 +32,7 @@
             font-weight: 500;
             font-size: 24px;
 
-            @media screen and (max-width:1440px) {
+            @media screen and (max-width:767px) {
                 font-size: 12px;
             }
         }
