--- a/src/pages/Error404/index.scss
+++ b/src/pages/Error404/index.scss
@@ -8,12 +8,28 @@
     align-items: center;
     margin: 120px 0;
 
+    img {
+        @media screen and (max-width:767px) {
+            width: 198px;
+        }
+    }
+
     p {
         font-size: 36px;
+
+        @media screen and (max-width:767px) {
+            font-size: 18px;
+            text-align: center;
+            margin: 0 70px;
+        }
     }
 
     a {
         font-size: 18px;
+
+        @media screen and (max-width:767px) {
+            font-size: 14px;
+        }
     }
 
     a,
