--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -7,7 +7,7 @@
     max-width: 1240px;
     height: 68px;
     margin: 45px auto;
-    padding: 0 45px;
+    // padding: 0 45px;
 
     @media screen and (max-width:767px) {
         width: 335px;
