projet fini a verifier

--- a/src/components/Carrousel/index.scss
+++ b/src/components/Carrousel/index.scss
@@ -38,6 +38,7 @@
         position: absolute;
         background: none;
         border: none;
+        cursor: pointer;
 
         &.previous-btn {
             left: 0;
