--- a/src/components/Cards/index.scss
+++ b/src/components/Cards/index.scss
@@ -24,6 +24,7 @@
         border-radius: 10px;
         background: linear-gradient(180deg, rgba(255, 255, 255, 1) 0%, rgba(0, 0, 0, 1) 50%);
         position: relative;
+        cursor: pointer;
 
         @media screen and (max-width:767px) {
             width: 335px;
