--- a/src/components/Dropdown/index.scss
+++ b/src/components/Dropdown/index.scss
@@ -14,6 +14,7 @@
         align-items: center;
         border-radius: 5px;
         font-weight: 500;
+        cursor: pointer;
 
         img {
             height: 9px;
