--- a/src/pages/Error404/index.scss
+++ b/src/pages/Error404/index.scss
@@ -26,6 +26,7 @@
 
     a {
         font-size: 18px;
+        text-decoration: underline;
 
         @media screen and (max-width:767px) {
             font-size: 14px;
