--- a/src/pages/Logement/index.scss
+++ b/src/pages/Logement/index.scss
@@ -55,6 +55,8 @@
                 display: flex;
                 text-align: right;
                 gap: 10px;
+                align-items: center;
+
 
                 .host-name {
 
