--- a/src/components/Dropdown/index.scss
+++ b/src/components/Dropdown/index.scss
@@ -2,7 +2,7 @@
 
 .dropdown-container {
     color: var.$MainColor;
-
+    max-width: 1023px;
 
     button {
         color: var.$White;
@@ -15,74 +15,6 @@
         border-radius: 5px;
         font-weight: 500;
         cursor: pointer;
-
-        img {
-            height: 9px;
-            width: 16px;
-        }
     }
 
-    &.small {
-        width: 335px;
-        display: none;
-
-        @media screen and (max-width: 767px) {
-            display: block;
-        }
-
-        button {
-            font-size: 13px;
-            padding: 10px 6px;
-            height: 30px;
-        }
-    }
-
-    &.medium {
-        width: 582px;
-
-
-        button {
-            height: 52px;
-            font-size: 18px;
-            padding: 10px 20px 10px 10px;
-        }
-    }
-
-    &.large {
-        width: 1023px;
-        display: block;
-
-        @media screen and (max-width: 767px) {
-            display: none;
-        }
-
-        button {
-            height: 52px;
-            font-size: 24px;
-            padding: 10px 15px 10px 15px;
-        }
-    }
-
-    .hide-content {
-        display: none;
-    }
-
-    .show-content {
-        display: block;
-        background: var.$Lightgrey;
-
-        &.small {
-            font-size: 12px;
-            line-height: 17px;
-            padding: 19px 20px;
-
-        }
-
-        &.large,
-        &.medium {
-            font-size: 18px;
-            line-height: 25.5px;
-            padding: 20px;
-        }
-    }
 }
