--- a/src/components/Cards/index.scss
+++ b/src/components/Cards/index.scss
@@ -3,19 +3,20 @@
 .cards-container {
     background: var.$Lightgrey;
     border-radius: 25px;
-    display: grid;
-    grid-template-columns: 340px 340px 340px;
-    justify-content: center;
     gap: 50px;
     margin: 43px 0 43px;
     padding: 50px;
+    display: flex;
+    flex-wrap: wrap;
 
-    @media screen and (max-width:767px) {
+    @media screen and (max-width: 1023px) {
         background: none;
-        margin: 20px 0;
         padding: 0;
-        gap: 20px;
-        grid-template-columns: 335px;
+    }
+
+    @media screen and (max-width: 426px) {
+        gap: 15px;
+        margin: 15px 0 15px;
     }
 
     .card {
@@ -23,12 +24,24 @@
         height: 340px;
         border-radius: 10px;
         background: linear-gradient(180deg, rgba(255, 255, 255, 1) 0%, rgba(0, 0, 0, 1) 50%);
+        margin: 0 auto;
         position: relative;
         cursor: pointer;
 
-        @media screen and (max-width:767px) {
+        @media screen and (max-width: 1439px) {
+            width: 35vw;
+            height: 340px;
+            gap: 2vw;
+        }
+
+        @media screen and (max-width: 1023px) {
+            width: 100%;
+            height: 255px;
+        }
+
+        @media screen and (max-width: 426px) {
             width: 335px;
-            height: 225px;
+            height: 255px;
         }
 
         img {
@@ -37,10 +50,21 @@
             border-radius: 10px;
             opacity: 80%;
             object-fit: cover;
+            min-width: 250px;
 
-            @media screen and (max-width:767px) {
+            @media screen and (max-width: 1439px) {
+                width: 35vw;
+                height: 340px;
+            }
+
+            @media screen and (max-width: 1023px) {
+                width: 100%;
+                height: 255px;
+            }
+
+            @media screen and (max-width: 426px) {
                 width: 335px;
-                height: 225px;
+                height: 255px;
             }
         }
 
@@ -48,17 +72,16 @@
             position: absolute;
             font-weight: 500;
             left: 20px;
-            top: 268px;
+            top: 290px;
             font-size: 18px;
             padding-right: 20px;
             color: var.$White;
 
-            @media screen and (max-width:767px) {
-                font-size: 18px;
-                top: 170px;
-                width: 295px;
-                padding: 0;
+            @media screen and (max-width: 1023px) {
+                top: 210px;
             }
+
+
         }
     }
 }
