--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -5,11 +5,12 @@
     justify-content: space-between;
     align-items: center;
     max-width: 1240px;
+    width: 85vw;
     height: 68px;
     margin: 45px auto;
-    // padding: 0 45px;
 
-    @media screen and (max-width:767px) {
+
+    @media screen and (max-width: 426px) {
         width: 335px;
         margin: 10px auto;
         padding: 0;
@@ -17,15 +18,19 @@
         img {
             width: 145px;
         }
+
     }
+
 
     ul {
         display: flex;
         gap: 57px;
 
-        @media screen and (max-width:767px) {
+        @media screen and (max-width: 1023px) {
+
             gap: 26px;
         }
+
 
         li {
             &.active {
@@ -38,10 +43,11 @@
                 font-weight: 500;
                 font-size: 24px;
 
-
-                @media screen and (max-width:767px) {
+                @media screen and (max-width: 1023px) {
+                    text-transform: uppercase;
                     font-size: 12px;
                 }
+
 
             }
 
