--- a/src/pages/Apropos/index.scss
+++ b/src/pages/Apropos/index.scss
@@ -1,7 +1,9 @@
 @use '../../styles/variables' as var;
 
 .a-propos-container {
-    width: 1240px;
+    max-width: 1240px;
+    min-width: 335px;
+    width: 85vw;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
@@ -9,8 +11,5 @@
     gap: 30px;
     margin-bottom: 30px;
 
-    @media screen and (max-width: 767px) {
-        width: 335px;
-    }
 
 }
