page a propos ok

--- a/src/components/Dropdown/index.scss
+++ b/src/components/Dropdown/index.scss
@@ -17,4 +17,11 @@
         cursor: pointer;
     }
 
+    .hide-content {
+        display: none;
+    }
+
+    .show-content {
+        display: block;
+    }
 }
