--- a/src/pages/Apropos/index.scss
+++ b/src/pages/Apropos/index.scss
@@ -11,5 +11,21 @@
     gap: 30px;
     margin-bottom: 30px;
 
+    .dropdown-container {
+        width: 1023px;
+
+        button {
+            height: 52px;
+            padding: 10px 15px;
+            font-size: 24px;
+            font-weight: 500;
+        }
+
+        .show-content {
+            padding: 10px 15px;
+            font-size: 18px;
+            font-weight: 400;
+        }
+    }
 
 }
