--- a/src/components/Carrousel/index.scss
+++ b/src/components/Carrousel/index.scss
@@ -3,11 +3,12 @@
 .carrousel {
     position: relative;
     height: 415px;
-    width: 1240px;
+    max-width: 1240px;
+    min-width: 335px;
+    width: 85vw;
     margin: 0 auto;
 
-    @media screen and (max-width: 787px) {
-        width: 335px;
+    @media screen and (max-width: 1023px) {
         height: 225px;
     }
 
