--- a/src/components/Carrousel/index.scss
+++ b/src/components/Carrousel/index.scss
@@ -14,9 +14,13 @@
 
     img {
         width: 100%;
-        height: 100%;
+        height: 415px;
         object-fit: cover;
         border-radius: 25px;
+
+        @media screen and (max-width: 1023px) {
+            height: 225px;
+        }
     }
 
     p {
