--- a/src/pages/Logement/index.scss
+++ b/src/pages/Logement/index.scss
@@ -50,8 +50,9 @@
 
             @media screen and (max-width:767px) {
                 display: flex;
-                flex-direction: column;
-                align-items: flex-end;
+                flex-direction: row-reverse;
+                justify-content: space-between;
+                align-items: center;
             }
 
             @media screen and (max-width:426px) {
