--- a/src/components/Cards/index.scss
+++ b/src/components/Cards/index.scss
@@ -70,12 +70,19 @@
 
         .card-title {
             position: absolute;
-            font-weight: 500;
+            height: 52px;
             left: 20px;
-            top: 290px;
-            font-size: 18px;
+            top: 280px;
             padding-right: 20px;
             color: var.$White;
+            display: flex;
+            align-items: flex-end;
+
+            h2 {
+                font-weight: 500;
+                font-size: 18px;
+
+            }
 
             @media screen and (max-width: 1023px) {
                 top: 210px;
